--- a/cards/css/scrollbarcards.css
+++ b/cards/css/scrollbarcards.css
@@ -3,13 +3,8 @@
     left: 300px;
 }
 .cards-section::-webkit-scrollbar-track{
-    border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.06);
 }
 .cards-section::-webkit-scrollbar-thumb{
-    border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.3);
-}
-.cards-section{
-    
 }
